--- a/html/pcalw.html
+++ b/html/pcalw.html
@@ -65,6 +65,7 @@
 <OPTION VALUE="-afr"> French
 <OPTION VALUE="-ade"> German
 <OPTION VALUE="-ael"> Greek
+<OPTION VALUE="-aha"> Hawaiian
 <OPTION VALUE="-ahu"> Hungarian
 <OPTION VALUE="-ait"> Italian
 <OPTION VALUE="-alv"> Latvian
@@ -73,6 +74,7 @@
 <OPTION VALUE="-apt"> Portuguese
 <OPTION VALUE="-aro"> Romanian
 <OPTION VALUE="-aru"> Russian
+<OPTION VALUE="-ask"> Slovak
 <OPTION VALUE="-aes"> Spanish
 <OPTION VALUE="-asv"> Swedish
 <OPTION VALUE="-auk"> Ukrainian
